<resources>
    <string name="app_name">Chuck Norris</string>
    <string name="title_nav_categorias">Início</string>
    <string name="title_nav_favoritos">Favoritos</string>
    <string name="title_nav_sobre">Sobre</string>
    <string name="title_nav_piada">Piada</string>
    <string name="text_splash">CHUCKNORRIS.IO</string>
    <string name="desc_icone_categoria">Icone da categoria</string>
    <string name="text_descricao">Descrição</string>
    <string name="btn_fonte">Fonte</string>
    <string name="text_value">Piada...</string>
    <string name="text_categories">Categoria</string>
    <string name="text_projeto_demostração">Aplicativo de demostração da API de ChuckNorris.</string>
    <string name="menu_favorito">Favorito</string>
    <string name="link_chucknorris_io">API - http://chucknorris.io/</string>
    <string name="link_github_projeto">Github - https://github.com/GilmarRodrigues/chucknorris</string>
</resources>