<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.SobreFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="121dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:src="@drawable/logo_chucknorris"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_fragent_sobre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/text_projeto_demostração"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tv_link_api_chucknorris_fragment_sobre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autoLink="web"
        android:text="@string/link_chucknorris_io"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_fragent_sobre"
        app:layout_constraintStart_toStartOf="@+id/tv_fragent_sobre"
        app:layout_constraintTop_toBottomOf="@+id/tv_fragent_sobre" />

    <TextView
        android:id="@+id/tv_github_projeto_app_fragment_sobre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autoLink="web"
        android:text="@string/link_github_projeto"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_fragent_sobre"
        app:layout_constraintStart_toStartOf="@+id/tv_fragent_sobre"
        app:layout_constraintTop_toBottomOf="@+id/tv_link_api_chucknorris_fragment_sobre" />
</androidx.constraintlayout.widget.ConstraintLayout>